# paper2stl

./: .gitignore  INSTALL.md  README.md  README_FR.md  RELEASE.md  SETUP.md  USER_MANUAL.md  pyproject.toml  requirements-cuda.txt  requirements-dev.txt  requirements.txt
config/: default.yaml
examples/: generate_synthetic.py
paper2stl/: __main__.py
paper2stl/export/: mesh_export.py
paper2stl/gui/: __init__.py  __main__.py  extras.py
paper2stl/gui/panels/: input_panel.py
paper2stl/gui/windows/: about_dialog.py  main_window.py
paper2stl/metadata/: ocr.py
paper2stl/preprocessing/: grid_removal.py  regularize.py
paper2stl/res/: LICENCE.txt
rhodia/: __init__.py  __main__.py  cli.py  config.py  device.py  pipeline.py
rhodia/detail_pages/: __init__.py  apply_details.py
rhodia/export/: __init__.py  mesh_export.py
rhodia/gui/: __init__.py  __main__.py  worker.py
rhodia/gui/panels/: input_panel.py  params_panel.py
rhodia/gui/widgets/: drop_zone.py  log_view.py  param_row.py  section.py
rhodia/gui/windows/: main_window.py
rhodia/metadata/: __init__.py
rhodia/preprocessing/: __init__.py  binarize.py  grid_removal.py  vectorize.py
rhodia/reconstruction/: __init__.py  csg_recon.py  reconstruct.py  registration.py  views.py
rhodia/utils/: __init__.py  geometry.py  io.py
scripts/: build_installer_app.ps1  build_installer_app.sh  build_windows.py
tests/: test_dashed_lines.py  test_reconstruction.py  test_registration.py  test_regularize.py
